[gd_scene load_steps=2 format=3 uid="uid://cukmtte6c0bte"]

[ext_resource type="Script" uid="uid://cb6qomrd88cei" path="res://menus/end_mission.gd" id="1_v56xq"]

[node name="EndMission" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v56xq")

[node name="VictoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryLabel" type="Label" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Victory!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemiesLabel" type="Label" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
text = "Enemies Killed: 0"
horizontal_alignment = 1

[node name="DurationLabel" type="Label" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "Mission Duration: 0m 0s"
horizontal_alignment = 1

[node name="BuildingsLabel" type="Label" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
text = "Buildings Destroyed: 0"
horizontal_alignment = 1

[node name="PointsLabel" type="Label" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 40.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
text = "Bonus Points: 0"
horizontal_alignment = 1

[node name="LevelProgressBar" type="ProgressBar" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 80.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false

[node name="RankLabel" type="Label" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 110.0
offset_right = 150.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
text = "Next Rank: Junior Associate"
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="VictoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 140.0
offset_right = 50.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"
